Bug 217633 - Kopete crashes when opening (by double-clicking a buddy in the list) or closing a chat window (or tab if there already is a window) [QObject::disconnect, OscarAccount::fileTransferRefused,..., Kopete::TransferManager::refused]
Summary: Kopete crashes when opening (by double-clicking a buddy in the list) or closi...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 190039 212884 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-06 21:01 UTC by Benedikt Haus
Modified: 2009-12-24 23:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benedikt Haus 2009-12-06 21:01:46 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-16-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
Kopete freezes when opening (by double-clicking a buddy in the list) a chat window (or tab if there already is a window). But I can send single messages to a specific buddy (from the richt-click-menu). The chat window opens correctly when somebody sends me a message. I can send messages in this windows/tab, too. This behavement started to come up yesterday after I added my Jabber-ID to make Kopete use Jabber and wrote a message to a Jabber-ID that wasn't in my buddylist. 

Today Kopete crashed the first time (until now it just freezed so I had to kill it - no bugreport wizard showed up). I just wanted to close a tab in the chat window (right-clicked it), when the buddylist and the chatwindow suddenly disappeared.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
The current source language is "auto; currently c".
[Current thread is 1 (Thread 0x7f8c0298a750 (LWP 3022))]

Thread 4 (Thread 0x7f8bfa68e910 (LWP 3023)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x0000003d7525f4fb in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=<value optimized out>, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=<value optimized out>, time=<value optimized out>) at thread/qwaitcondition_unix.cpp:159
#3  0x0000003d75c8278c in QHostInfoAgent::run (this=<value optimized out>) at kernel/qhostinfo.cpp:260
#4  0x0000003d7525e445 in QThreadPrivate::start (arg=<value optimized out>) at thread/qthread_unix.cpp:188
#5  0x0000003d76806a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#6  0x0000003d760df7bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f8bf9261910 (LWP 3024)):
#0  0x0000003d768090b2 in __pthread_mutex_lock (mutex=<value optimized out>) at pthread_mutex_lock.c:61
#1  0x0000003d77c3ede5 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#2  0x0000003d77c3f181 in ?? () from /lib/libglib-2.0.so.0
#3  0x0000003d77c3f6b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x0000003d7536d1fe in QEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:329
#5  0x0000003d75343532 in QEventLoop::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:149
#6  0x0000003d75343904 in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:201
#7  0x0000003d7cc6d123 in QCA::SyncThread::run() () from /usr/lib/libqca.so.2
#8  0x0000003d7525e445 in QThreadPrivate::start (arg=<value optimized out>) at thread/qthread_unix.cpp:188
#9  0x0000003d76806a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x0000003d760df7bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()
The current source language is "auto; currently asm".

Thread 2 (Thread 0x7f8bf8a60910 (LWP 3025)):
#0  0x0000003d760d3373 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x0000003d77c3f36c in ?? () from /lib/libglib-2.0.so.0
#2  0x0000003d77c3f6b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x0000003d7536d1fe in QEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:329
#4  0x0000003d75343532 in QEventLoop::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:149
#5  0x0000003d75343904 in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:201
#6  0x00007f8bfedf2822 in XMPP::SyncThread::run (this=0x7f8bf40076a0) at ../../../../../kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#7  0x0000003d7525e445 in QThreadPrivate::start (arg=<value optimized out>) at thread/qthread_unix.cpp:188
#8  0x0000003d76806a04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#9  0x0000003d760df7bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()
The current source language is "auto; currently c".

Thread 1 (Thread 0x7f8c0298a750 (LWP 3022)):
[KCrash Handler]
#5  0x0000003a9ca0fed0 in vtable for KToolBar () from /usr/lib/libkdeui.so.5
#6  0x0000003d753598c2 in QObject::disconnect (sender=<value optimized out>, signal=<value optimized out>, receiver=<value optimized out>, method=<value optimized out>) at kernel/qobject.cpp:2673
#7  0x00007f8bfe5215ac in OscarAccount::fileTransferRefused (this=<value optimized out>, info=<value optimized out>) at ../../../../kopete/protocols/oscar/oscaraccount.cpp:550
#8  0x00007f8bfe52ff3b in OscarAccount::qt_metacall (this=0x28b7e80, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff787bfcb0) at ./oscaraccount.moc:147
#9  0x00007f8bfe7db330 in ICQAccount::qt_metacall (this=0x9a867f0, _c=42696320, _id=162031600, _a=0x3d753d9504) at ./icqaccount.moc:141
#10 0x0000003d75359ddc in QMetaObject::activate (sender=<value optimized out>, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=<value optimized out>)
    at kernel/qobject.cpp:3113
#11 0x00000039b44f8805 in Kopete::TransferManager::refused (this=<value optimized out>, _t1=<value optimized out>) at ./kopetetransfermanager.moc:120
#12 0x00000039b44fd87c in Kopete::TransferManager::cancelIncomingTransfer (this=<value optimized out>, id=<value optimized out>) at ../../../kopete/libkopete/kopetetransfermanager.cpp:451
#13 0x00007f8bff758f37 in ~ChatMessagePart (this=0x2eedec0, __in_chrg=<value optimized out>, __vtt_parm=<value optimized out>) at ../../../../kopete/kopete/chatwindow/chatmessagepart.cpp:292
#14 0x0000003a9d621526 in KParts::Part::slotWidgetDestroyed (this=<value optimized out>) at ../../kparts/part.cpp:354
#15 0x0000003a9d62161c in KParts::Part::qt_metacall (this=<value optimized out>, _c=<value optimized out>, _id=<value optimized out>, _a=<value optimized out>) at ./part.moc:76
#16 0x0000003a9d621675 in KParts::ReadOnlyPart::qt_metacall (this=<value optimized out>, _c=<value optimized out>, _id=<value optimized out>, _a=<value optimized out>) at ./part.moc:154
#17 0x0000003aa2019ffe in KHTMLPart::qt_metacall (this=<value optimized out>, _c=<value optimized out>, _id=<value optimized out>, _a=<value optimized out>) at ./khtml_part.moc:246
#18 0x00007f8bff75c910 in ChatMessagePart::qt_metacall (this=0x9a867f0, _c=42696320, _id=162031600, _a=0x3d753d9504) at ./chatmessagepart.moc:116
#19 0x0000003d75359ddc in QMetaObject::activate (sender=<value optimized out>, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=<value optimized out>)
    at kernel/qobject.cpp:3113
#20 0x0000003d7535a314 in QObject::destroyed (this=<value optimized out>, _t1=<value optimized out>) at .moc/release-shared/moc_qobject.cpp:143
#21 0x0000003d7535b17b in ~QObject (this=<value optimized out>, __in_chrg=<value optimized out>) at kernel/qobject.cpp:757
#22 0x00000039699eb628 in ~QWidget (this=<value optimized out>, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1380
#23 0x0000003d75352e5c in QObjectPrivate::deleteChildren (this=<value optimized out>) at kernel/qobject.cpp:1847
#24 0x00000039699eb993 in ~QWidget (this=<value optimized out>, __in_chrg=<value optimized out>) at kernel/qwidget.cpp:1367
#25 0x00007f8bff0bb5ea in ~ChatView (this=0x2c7eb10, __in_chrg=<value optimized out>) at ../../../../kopete/kopete/chatwindow/chatview.cpp:180
#26 0x0000003d7535411d in QObject::event (this=<value optimized out>, e=<value optimized out>) at kernel/qobject.cpp:1094
#27 0x00000039699ef15f in QWidget::event (this=<value optimized out>, event=<value optimized out>) at kernel/qwidget.cpp:7946
#28 0x0000003969d4b2a6 in QFrame::event (this=<value optimized out>, e=<value optimized out>) at widgets/qframe.cpp:559
#29 0x00000039699a0efc in QApplicationPrivate::notify_helper (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4056
#30 0x00000039699a81ce in QApplication::notify (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4021
#31 0x0000003a9c623e56 in KApplication::notify (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at ../../kdeui/kernel/kapplication.cpp:302
#32 0x0000003d75344c2c in QCoreApplication::notifyInternal (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at kernel/qcoreapplication.cpp:610
#33 0x0000003d7534580a in QCoreApplication::sendEvent (receiver=<value optimized out>, event_type=<value optimized out>, data=<value optimized out>)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#34 QCoreApplicationPrivate::sendPostedEvents (receiver=<value optimized out>, event_type=<value optimized out>, data=<value optimized out>) at kernel/qcoreapplication.cpp:1247
#35 0x0000003d7536d533 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#36 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:210
#37 0x0000003d77c3bbbe in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#38 0x0000003d77c3f588 in ?? () from /lib/libglib-2.0.so.0
#39 0x0000003d77c3f6b0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#40 0x0000003d7536d1a6 in QEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#41 0x0000003969a354be in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#42 0x0000003d75343532 in QEventLoop::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:149
#43 0x0000003d75343904 in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:201
#44 0x0000003d75345ab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#45 0x00000000004157f6 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../kopete/kopete/main.cpp:104

Reported using DrKonqi
Comment 1 Dario Andres 2009-12-06 21:41:30 UTC
*** Bug 212884 has been marked as a duplicate of this bug. ***
Comment 2 Roman Jarosz 2009-12-24 23:42:48 UTC
*** Bug 190039 has been marked as a duplicate of this bug. ***
Comment 3 Roman Jarosz 2009-12-24 23:46:56 UTC
SVN commit 1065933 by rjarosz:

Remove deleted/canceled file transfer from map.
File transfer info fixes (removed duplicated messages).

BUG: 217633



 M  +9 -4      libkopete/kopetetransfermanager.cpp  
 M  +57 -8     protocols/oscar/liboscar/filetransferhandler.cpp  
 M  +9 -1      protocols/oscar/liboscar/filetransferhandler.h  
 M  +1 -1      protocols/oscar/liboscar/tasks/filetransfertask.cpp  
 M  +1 -5      protocols/oscar/oscaraccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065933