Remove deleted/canceled file transfer from map. File transfer info fixes (removed duplicated messages).

BUG: 217633


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1065933